src/snapshots/heave__tests__cycle_detection@RequestBodyCycle.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/cycle_detection/RequestBodyCycle.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            path: "/pets",
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
            ],
            request_body_parameter: "{\n  \"name\": \"\",\n  \"parent\": {\n    \"name\": \"\"\n  }\n}",
        },
    ],
    diagnostics: [
        RequestBodySchemaCycleDetected {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            jsonpath: "$.parent.parent",
        },
    ],
}
