src/snapshots/heave__tests__cycle_detection@ResponseBodyCycle.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/cycle_detection/ResponseBodyCycle.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            path: "/pets",
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
                "#jsonpath \"$.name\" isString",
                "#jsonpath \"$.parent\" isCollection",
                "#jsonpath \"$.parent.name\" isString",
            ],
            request_body_parameter: "{\n  \"name\": \"\"\n}",
        },
    ],
    diagnostics: [
        ResponseBodySchemaCycleDetected {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            jsonpath: "$.parent.parent",
        },
    ],
}
