src/snapshots/heave__tests__cycle_detection@ResponseBodySeparatedCycle.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/cycle_detection/ResponseBodySeparatedCycle.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            hurl_path: "/pets",
            oas_path: "/pets",
            oas_operation_id: Some(
                "addPet",
            ),
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
                "#jsonpath \"$.B\" isCollection",
                "#jsonpath \"$.B.A\" isCollection",
                "#jsonpath \"$.B.A.name\" isString",
                "#jsonpath \"$.B.name\" isString",
                "#jsonpath \"$.name\" isString",
            ],
            request_body_parameter: "{\n  \"name\": \"\"\n}",
        },
    ],
    diagnostics: [
        ResponseBodySchemaCycleDetected {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            jsonpath: "$.B.A.B",
        },
    ],
}
